...
    <string name="success_deleted_account">Account deleted successfully!</string>
    <string name="success_updated_account">Account updated successfully!</string>
    <string name="error_save_unsuccessful">Account already exists! Use a different username.</string>
    <string name="error_update_unsuccessful">Account failed to update! Please try again.</string>
    <string name="error_passcode_length">Passcode must be 5 digits</string>
    <string name="error_text_empty">%1$s must not be empty</string>
    <string name="error_password_must_match">Passwords must match</string>
    <string name="error_passcode_must_match">Passcodes must match</string>
    <string name="error_wrong_passcode">Passcode entered is incorrect. Try again!</string>
    <string name="error_wrong_secret_answer">Secret answer is incorrect.</string>
    <string name="error_reset_unsuccessful">Something went wrong with the passcode reset. Try again!</string>

    <!-- Bottom / Top Navigation Menu Item Labels   -->
...
